objects/Organic_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>if(isblank(Closed_Date__c ),  now() -  CreatedDate , Closed_Date__c - CreatedDate)</formula>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Bing_Pin_Sent__c</fullName>
        <description># days since Bing pin sent</description>
        <formula>Today()-( B_Postcard_Request__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Bing Pin Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Cleaned_Out__c</fullName>
        <formula>if(
isnull(Cleaned_Out_Date__c), null,
today()- Cleaned_Out_Date__c)</formula>
        <label>Days Since Cleaned Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Google_Pin_Received__c</fullName>
        <formula>Today()-( G_Pin_Receipt__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Google Pin Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Google_Pin_Sent__c</fullName>
        <description># of days since Google Pin Sent</description>
        <formula>Today()-( G_Postcard_Request__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Google Pin Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Moved_to_Bing_Rebuild__c</fullName>
        <formula>Today()-Date_Moved_to_Bing_Rebuild_Needed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Moved to Bing Rebuild</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Moved_to_G_Account_Rebuild__c</fullName>
        <formula>Today()-(Date_Moved_to_Google_Account_Rebuild__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since  Moved to G Account Rebuild</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Moved_to_G_Listing_Rebuild__c</fullName>
        <formula>Today()-(Date_Moved_to_Google_Listing_Rebuild__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Moved to G Listing Rebuild</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Organic_Deactivation__c</fullName>
        <formula>TODAY()-Account_Name__r.Organic_Deactivation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Organic Deactivation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Reopen__c</fullName>
        <formula>if( 
isnull( Reopened_Date__c ), null, 
now()- Reopened_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Reopen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Collect_Bing__c</fullName>
        <formula>B_Pin_Receipt__c -  B_Postcard_Request__c</formula>
        <inlineHelpText>Time between Bing Postcard Request to the Bing Pin Receipt.</inlineHelpText>
        <label>Days to Collect Bing Pin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Collect_Google_Pin__c</fullName>
        <formula>G_Pin_Receipt__c   -  G_Postcard_Request__c</formula>
        <inlineHelpText>Days between Google postcard request and Google Pin Receipt.</inlineHelpText>
        <label>Days to Collect Google Pin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Quality__c</fullName>
        <inlineHelpText>Is the website designed with the end user in mind? Is the structure confusing?</inlineHelpText>
        <label>Design Quality?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Clean_Out_Listing__c</fullName>
        <formula>IF( Account_Name__r.Not_OK_To_Clean_Out_Listing__c = TRUE,"True","False")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do Not Clean Out Listing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Other_Domains_Exist__c</fullName>
        <inlineHelpText>Search the client's: (name, address, &amp; phone number).</inlineHelpText>
        <label>Do Other Domains Exist?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Include in Notes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domain_Inputted_Into_Hotfrog_ca__c</fullName>
        <label>Hotfrog Listing URL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Inputted_Into_Ourbis_ca__c</fullName>
        <label>Ourbis Listing URL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Inputted_Into_Yellowpages_ca__c</fullName>
        <label>Yellowpages Listing URL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Inputted_into_BLocal__c</fullName>
        <label>B - Website</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Inputted_into_GLocal__c</fullName>
        <label>G - Website URL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Inputted_into_Ibegin__c</fullName>
        <label>IBegin Listing URL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Inputted_into_Weblocal__c</fullName>
        <label>Weblocal Listing URL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Category_Term__c</fullName>
        <formula>If(
Categories_Inputted_into_GLocal__c =  Category_2_Inputted_into_GLocal__c, Categories_Inputted_into_GLocal__c,
If(
Categories_Inputted_into_GLocal__c = Category_3_Inputted_into_GLocal__c ,  Categories_Inputted_into_GLocal__c,
If(
Categories_Inputted_into_GLocal__c =  Category_4_Inputted_into_GLocal__c,  Categories_Inputted_into_GLocal__c,
IF(
Categories_Inputted_into_GLocal__c =  Category_5_Inputted_into_GLocal__c, Categories_Inputted_into_GLocal__c,
IF(
Category_2_Inputted_into_GLocal__c  = Category_3_Inputted_into_GLocal__c, Category_2_Inputted_into_GLocal__c,
IF(
Category_2_Inputted_into_GLocal__c  = Category_4_Inputted_into_GLocal__c, 
Category_2_Inputted_into_GLocal__c,
IF(
Category_2_Inputted_into_GLocal__c  = Category_5_Inputted_into_GLocal__c,Category_2_Inputted_into_GLocal__c,
IF(
Category_3_Inputted_into_GLocal__c = Category_4_Inputted_into_GLocal__c, Category_3_Inputted_into_GLocal__c,
IF(
Category_3_Inputted_into_GLocal__c = Category_5_Inputted_into_GLocal__c, Category_3_Inputted_into_GLocal__c,
IF(
Category_4_Inputted_into_GLocal__c = Category_5_Inputted_into_GLocal__c, Category_4_Inputted_into_GLocal__c,
""))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplicate Category Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Listing_Found__c</fullName>
        <label>Duplicate Listing Found</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EA_Articles_Link_Anchor_Text__c</fullName>
        <inlineHelpText>Ensure we using quality anchor texts within the articles to provide value to the correct pages.</inlineHelpText>
        <label>EA Articles Link Anchor Text?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No - Send to Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EA_Articles_Link_Correctly__c</fullName>
        <inlineHelpText>Ensure the articles are sending value to the correct landing pages.</inlineHelpText>
        <label>EA Articles Link Destination?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No - Send to Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EA_Hub_Present__c</fullName>
        <inlineHelpText>Is there a hub on the website providing links to the EA articles?</inlineHelpText>
        <label>EA Hub Present?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address_Used_for_Shared_Management__c</fullName>
        <label>Email Address Used for Shared Management</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalation_Reason__c</fullName>
        <description>PIN action need New</description>
        <label>Escalation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Priority__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cancellation/Retention</fullName>
                </value>
                <value>
                    <fullName>Previous Error</fullName>
                </value>
                <value>
                    <fullName>Manager Request</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalation_Request_Date__c</fullName>
        <label>Escalation Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Existing_Listing_Update__c</fullName>
        <label>Existing Listing Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Failed_Co_Mgmt_Reason__c</fullName>
        <label>Failed Co-Mgmt Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unable to Reach Client</fullName>
                </value>
                <value>
                    <fullName>Unknown Owner of Google Acct - No Response</fullName>
                </value>
                <value>
                    <fullName>Known Owner of Google Acct - No Response</fullName>
                </value>
                <value>
                    <fullName>Client Contacting Google</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GLocal__c</fullName>
        <label>GLocal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dup Listing Found</fullName>
                </value>
                <value>
                    <fullName>Edit_View Mismatch</fullName>
                </value>
                <value>
                    <fullName>Listing Not Indexed</fullName>
                </value>
                <value>
                    <fullName>Location Not Supported</fullName>
                </value>
                <value>
                    <fullName>No Claimed Listing</fullName>
                </value>
                <value>
                    <fullName>Not 100 Complete</fullName>
                </value>
                <value>
                    <fullName>Opt Incorrect_Bad Info</fullName>
                </value>
                <value>
                    <fullName>Rejected or Suspended Listing</fullName>
                </value>
                <value>
                    <fullName>Erroneously Merged Listing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GMBL_Account_Status__c</fullName>
        <label>GMBL Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Awaiting Verification</fullName>
                </value>
                <value>
                    <fullName>Active - SAB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GMBL_Business_Type__c</fullName>
        <label>GMBL Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAB</fullName>
                </value>
                <value>
                    <fullName>Stationary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GMBL_Listing_Status__c</fullName>
        <label>GMBL Listing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unverified</fullName>
                </value>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>Live (with updates)</fullName>
                </value>
                <value>
                    <fullName>Errors</fullName>
                </value>
                <value>
                    <fullName>Owner Conflicts</fullName>
                </value>
                <value>
                    <fullName>Duplicates</fullName>
                </value>
                <value>
                    <fullName>Pending Review</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GMBL_Login_E_Mail__c</fullName>
        <formula>Account_Name__r.GMBL_Login_Email_Parent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GMBL Login E-Mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMBL_Login_Email__c</fullName>
        <label>GMBL Login Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMBL_Login_PW__c</fullName>
        <formula>Account_Name__r.GMBL_Login_Password_Parent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GMBL Login PW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMBL_Login_Password__c</fullName>
        <label>GMBL Login Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMBL_Owner_Conflict_Status__c</fullName>
        <label>GMBL Owner Conflict Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>GMBL_Listing_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Owner Conflict - unmanaged</fullName>
                </value>
                <value>
                    <fullName>Owner Conflict - managed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GPin_Received__c</fullName>
        <label>GPin # Received</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWMT_verication_file_saved_to_root__c</fullName>
        <label>GWMT verication file saved to root?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GWT_Crawl_Errors__c</fullName>
        <inlineHelpText>Are there any crawl errors in Google Webmaster Tools? (404, etc)</inlineHelpText>
        <label>GWT Crawl Errors?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - 301 Redirects Case</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GWT_Errors_Found__c</fullName>
        <label>GWT Errors Found</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Found</fullName>
                </value>
                <value>
                    <fullName>URLs Not Followed</fullName>
                </value>
                <value>
                    <fullName>URLs Restricted by Robots.txt</fullName>
                </value>
                <value>
                    <fullName>URLs Timed Out</fullName>
                </value>
                <value>
                    <fullName>HTTP Errors</fullName>
                </value>
                <value>
                    <fullName>URL Unreachable</fullName>
                </value>
                <value>
                    <fullName>Soft 404s</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GWT_HTML_Suggestions__c</fullName>
        <label>GWT HTML Suggestions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Errors Found</fullName>
                </value>
                <value>
                    <fullName>No Errors Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GWT_site_map_xml_Downloaded__c</fullName>
        <label>GWT "site-map.xml" Downloaded</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Errors Found</fullName>
                </value>
                <value>
                    <fullName>No Errors Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G_Address_for_Postcard__c</fullName>
        <label>G - Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G_B_New_Listing_Build_Date__c</fullName>
        <label>G &amp; B New Listing Build Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G_Biz_Desc_contain_200_char__c</fullName>
        <description>Google-does the business description contain 200 characters?</description>
        <inlineHelpText>Google-does the business description contain 200 characters?</inlineHelpText>
        <label>G-Business Description only 200 chars?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No - Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G_Biz_Desc_error_free__c</fullName>
        <description>Google-Is the Business Description free of grammar and spelling errors</description>
        <inlineHelpText>Google-Is the Business Description free of grammar and spelling errors</inlineHelpText>
        <label>G-Is Business Description Error Free?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No - Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G_Correct_Biz_Name_used__c</fullName>
        <description>Google-Is the correct Business Name used?</description>
        <inlineHelpText>Google-Is the correct Business Name used?</inlineHelpText>
        <label>G-Is Correct Business Name Used?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No - Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G_Does_the_listing_contain_images__c</fullName>
        <description>Google-Does the listing contain images?</description>
        <inlineHelpText>Google-Does the listing contain images?</inlineHelpText>
        <label>G-Does the listing contain images</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No - Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G_Is_the_listing_created__c</fullName>
        <description>Google-Is the listing created?</description>
        <inlineHelpText>Is the listing created?</inlineHelpText>
        <label>G-Is the listing created</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No - Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G_PIN_Received_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>G PIN Received By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Organic_Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>G_Pin_Receipt__c</fullName>
        <label>G Pin Receipt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G_Postcard_Request__c</fullName>
        <label>Google PIN Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Geographic_Area_List__c</fullName>
        <inlineHelpText>Do we have a list of geo's that the client serves on the website?</inlineHelpText>
        <label>Geographic Area List?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Good_Internal_Linking_Structure__c</fullName>
        <inlineHelpText>Can the internal linking structure be improved? If not, try to build links within content and improve user experience through quality navigation.</inlineHelpText>
        <label>Good Linking Structure?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No - Build Links</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Google_Account_Status__c</fullName>
        <label>Google Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Active, Previously Suspended</fullName>
                </value>
                <value>
                    <fullName>Active, Previously Disabled/Suspended</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Active, Rebuilt</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Google_Analytics_Code_Present__c</fullName>
        <label>Google Analytics Code Present?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No - Need to add</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Google_Impressions__c</fullName>
        <label>Google Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Listing_Created__c</fullName>
        <label>Google Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Client Created/No Tracking #</fullName>
                </value>
                <value>
                    <fullName>New Listing Created</fullName>
                </value>
                <value>
                    <fullName>New Listing Created and Claimed</fullName>
                </value>
                <value>
                    <fullName>Owner Verified Existing Listing Edited</fullName>
                </value>
                <value>
                    <fullName>Un-Claimable Listing</fullName>
                </value>
                <value>
                    <fullName>Un-Verified Existing Listing Edited</fullName>
                </value>
                <value>
                    <fullName>Yodle Created/No Tracking #</fullName>
                </value>
                <value>
                    <fullName>Yodle Created/Tracking #</fullName>
                </value>
                <value>
                    <fullName>Existing Listings Found</fullName>
                </value>
                <value>
                    <fullName>Google Listing Rebuild</fullName>
                </value>
                <value>
                    <fullName>Google Account Rebuild</fullName>
                </value>
                <value>
                    <fullName>Listing Resides in Bulk Account</fullName>
                </value>
                <value>
                    <fullName>Pending Google Whitelist</fullName>
                </value>
                <value>
                    <fullName>Google Whitelist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Google_Listing_Issue_Needs_Updating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Google Listing Issue: Needs Updating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Google_Login_Email_PAN__c</fullName>
        <formula>Account_Name__r.Phone</formula>
        <label>Google Login Email PAN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Login_Email__c</fullName>
        <label>Google Login Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Google_Login_Password__c</fullName>
        <label>Google Login Password</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Google_Maps_URL__c</fullName>
        <label>Google Listing URL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_My_Business_Listing__c</fullName>
        <label>Google My Business Listing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Build Issue</fullName>
                </value>
                <value>
                    <fullName>Client Refuses Claim</fullName>
                </value>
                <value>
                    <fullName>Duplicate Listing Found</fullName>
                </value>
                <value>
                    <fullName>Error Message on Google Listing</fullName>
                </value>
                <value>
                    <fullName>Google PIN Marker Incorrect</fullName>
                </value>
                <value>
                    <fullName>Incorrect Information on Google Listing</fullName>
                </value>
                <value>
                    <fullName>Lacking G+ Reviews</fullName>
                </value>
                <value>
                    <fullName>Listing Not Managed or Claimed by Yodle</fullName>
                </value>
                <value>
                    <fullName>Metro Match False</fullName>
                </value>
                <value>
                    <fullName>NAP Issue</fullName>
                </value>
                <value>
                    <fullName>No Major Setup Issues Found</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Primary Category Not Available</fullName>
                </value>
                <value>
                    <fullName>Primary Category or Categories Incorrect</fullName>
                </value>
                <value>
                    <fullName>Whitelist Upload Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Google_New_Listing_Build_Date__c</fullName>
        <label>Google New Listing Build Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Google_PIN_Process_Address__c</fullName>
        <formula>if(
or(
ispickval(Listing_1_Action_Completed__c ,"Awaiting PIN"),
ispickval(Listing_1_Action_Completed__c ,"Owner-Verified")),
 Listing_1_Business_Name_Address__c ,
if(
or(
ispickval(Listing_2_Action_Completed__c ,"Awaiting PIN"),
ispickval(Listing_2_Action_Completed__c ,"Owner-Verified")),
 Listing_2_Business_Name_Address__c ,
if(
or(
ispickval(Listing_3_Action_Completed__c ,"Awaiting PIN"),
ispickval(Listing_3_Action_Completed__c ,"Owner-Verified")),
 Listing_3_Business_Name_Address__c ,
if(
or(
ispickval(Listing_4_Action_Completed__c ,"Awaiting PIN"),
ispickval(Listing_4_Action_Completed__c ,"Owner-Verified")),
 Listing_4_Business_Name_Address__c ,
null))))</formula>
        <label>Google PIN Process Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_PIN_Process_URL__c</fullName>
        <formula>if(
or(
ispickval(Listing_1_Action_Completed__c ,"Awaiting PIN"),
ispickval(Listing_1_Action_Completed__c ,"Owner-Verified")),
  Listing_1_URL_IT_Pro__c  ,
if(
or(
ispickval(Listing_2_Action_Completed__c ,"Awaiting PIN"),
ispickval(Listing_2_Action_Completed__c ,"Owner-Verified")),
 Listing_2_URL_IT_Pro__c,
if(
or(
ispickval(Listing_3_Action_Completed__c ,"Awaiting PIN"),
ispickval(Listing_3_Action_Completed__c ,"Owner-Verified")),
 Listing_3_URL_IT_Pro__c,
if(
or(
ispickval(Listing_4_Action_Completed__c ,"Awaiting PIN"),
ispickval(Listing_4_Action_Completed__c ,"Owner-Verified")),
 Listing_4_URL_IT_Pro__c,
null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google PIN Process URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_PIN_Send_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of attempts based on the G_Postcard_Request__c field via workflow</description>
        <label># Google PIN Send Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>